--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-exerciseUICatalog project/exerciseUICatalog.xcodeproj/project.xcworkspace/xcuserdata/ljw.xcuserdatad/UserInterfaceState.xcuserstate
+'exerciseUICatalog project/exerciseUICatalog.xcodeproj/project.xcworkspace/xcuserdata/ljw.xcuserdatad/UserInterfaceState.xcuserstate
